# customer-slip-generator

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  product-slip_v1.cpp
.github/workflows/: ci.yml
include/: customer_slip.h
src/: customer_slip.cpp
tests/: test_core.cpp
tools/: import_csv.py  query_db.py
